Localized blog posts and titles
Signed-off-by: George Araujo <george.gcac@gmail.com>

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -50,6 +50,9 @@ months:
 news:
   titles:
     news2: A long announcement with details
+pagination:
+  newer: Newer
+  older: Older
 projects:
   titles:
     project1: Project 1
