--- a/_i18n/pt-br.yml
+++ b/_i18n/pt-br.yml
@@ -50,6 +50,9 @@ months:
 news:
   titles:
     news2: Um anúncio longo com detalhes
+pagination:
+  newer: Recentes
+  older: Antigas
 projects:
   titles:
     project1: Projeto 1
