--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -1,3 +1,9 @@
+main:
+  description: A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  footer_text: > # the ">" symbol means to ignore newlines until "titles:"
+    Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/george-gca/multi-language-al-folio">multi-language-al-folio</a> theme.
+    Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+    Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 titles:
   about: about
   blog: blog
@@ -6,6 +12,7 @@ titles:
   projects: projects
   publications: publications
   repositories: repositories
+  selected_publications: selected publications
   teaching: teaching
   submenus: submenus
   unk: page not found
