--- a/_i18n/pt-br.yml
+++ b/_i18n/pt-br.yml
@@ -1,3 +1,9 @@
+main:
+  description: Um tema simples para acadêmicos. Baseado no design do [*folio](https://github.com/bogoli/-folio).
+  footer_text: > # the ">" symbol means to ignore newlines until "titles:"
+    Desenvolvido em <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> com o tema <a href="https://github.com/george-gca/multi-language-al-folio">multi-language-al-folio</a>.
+    Hospedado por <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+    Fotos do <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 titles:
   about: sobre
   blog: blog
@@ -6,14 +12,15 @@ titles:
   projects: projetos
   publications: publicações
   repositories: repositórios
+  selected_publications: publicações selecionadas
   teaching: ensino
   submenus: submenus
   unk: página não encontrada
 descriptions:
   about: sobre
-  archive-category: um arquivo com postagens desta categoria
-  archive-tag: um arquivo com postagens com este marcador
-  archive-year: um arquivo com postagens deste ano
+  archive-category: um arquivo de postagens desta categoria
+  archive-tag: um arquivo de postagens com este marcador
+  archive-year: um arquivo de postagens deste ano
   blog: blogging
   publications: publicações por categoria em ordem cronológica reversa. gerado pelo jekyll-scholar.
   projects: Uma crescente coleção de seus projetos interessantes.
