--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -1,9 +1,15 @@
 main:
+  address: >
+    <p>555 your office number</p>
+    <p>123 your address street</p>
+    <p>Your City, State 12345</p>
+  contact_note: You can even add a little note about which of these is the best way to reach you.
   description: A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
   footer_text: > # the ">" symbol means to ignore newlines until "titles:"
     Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/george-gca/multi-language-al-folio">multi-language-al-folio</a> theme.
     Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
     Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
+  subtitle: <a href='#'>Affiliations</a>. Address. Contacts. Motto. Etc.
 titles:
   about: about
   blog: blog
@@ -27,6 +33,10 @@ descriptions:
   repositories: Edit the `_data/repositories.yml` and change the `github_users` and `github_repos` lists to include your own GitHub profile and repositories.
   teaching: Materials for courses you taught. Replace this text with your description.
   unk: Looks like there has been a mistake. Nothing exists here.
+blog:
+  description: a simple whitespace theme for academics
+  name: al-folio blog in english # blog_name will be displayed in your blog page
+  nav_title: blog # your blog must have a title for it to be displayed in the nav bar
 months:
   long:
     january: January
