--- a/_config.yml
+++ b/_config.yml
@@ -133,7 +133,7 @@ giscus:
   emit_metadata: 0
 
 # Disqus comments (DEPRECATED)
-# disqus_shortname: # put your disqus shortname
+disqus_shortname: multi-language-al-folio # put your disqus shortname
 # https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 # External sources.
