Added localized 404 message in for loop
Signed-off-by: George Araújo <george.gcac@gmail.com>

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -1,3 +1,6 @@
+not_found:
+  message: You will be redirected to the main page within 3 seconds. If not redirected, please go back to the
+  main_page: home page
 main:
   address: >
     <p>555 your office number</p>
