--- a/_i18n/pt-br.yml
+++ b/_i18n/pt-br.yml
@@ -1,3 +1,6 @@
+not_found:
+  message: Você será redirecionado para a página principal em 3 segundos. Se não for redirecionado, por favor volte para a
+  main_page: página principal
 main:
   address: >
     <p>555 seu telefone do trabalho</p>
