--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install and Build 🔧
       run: |
         pip3 install --upgrade jupyter
-        npm install -g mermaid.cli
+        npm install -g @mermaid-js/mermaid-cli
         export JEKYLL_ENV=production
         bundle exec jekyll build
     - name: Deploy 🚀
